--- a/piaofanzi/mobile/index.html
+++ b/piaofanzi/mobile/index.html
@@ -53,7 +53,7 @@
     <div class="main" id="skrollr-body">
         <section class="page page-1">
             <div class="logo"></div>
-            <h1>票贩子<br>会比价  更省钱</h1>
+            <h1>票贩儿@比价<br>会比价  更省钱</h1>
             <div class="btn-wrap">
                 <a href="#" class="btn btn-iphone">
                     <i class="fa fa-apple"></i>
