--- a/piaofanzi/index.html
+++ b/piaofanzi/index.html
@@ -134,10 +134,41 @@
 	<script src="js/jquery.min.js"></script>
 	<script>
 	(function() {
-		var $mover1 = $('.focus .mover').eq(0);
-		var $mover2 = $('.focus .mover').eq(1);
-		var $mover3 = $('.focus .mover').eq(2);
-		var $mover4 = $('.focus .mover').eq(3);
+		var $movers = $('.focus .mover');
+		var $mover1 = $movers.eq(0);
+		var $mover2 = $movers.eq(1);
+		var $mover3 = $movers.eq(2);
+		var $mover4 = $movers.eq(3);
+		var len = $mover1.find('img').length;
+		var winHeight = $(window).height();
+		var imgs = [{
+			width: 1920,
+			height: 248,
+			ratio: 0.26
+		}, {
+			width: 1920,
+			height: 247,
+			ratio: 0.26
+		}, {
+			width: 1920,
+			height: 249,
+			ratio: 0.26
+		}, {
+			width: 1920,
+			height: 197,
+			ratio: 0.22
+		}];
+
+		function initMoverWidth() {
+			$.each($movers, function(i, mover) {
+				var img = imgs[i];
+				$(mover).css({
+					width: len * winHeight * img.ratio * img.width / img.height
+				});
+			});
+		}
+
+		initMoverWidth();
 
 		function move($elm, direction, speed) {
 			var $img = $elm.find('img');
@@ -148,7 +179,6 @@
 			$elm.css('width', imgWidth * len);
 			$elm.css(dir, pos);
 			setInterval(function() {
-
 				if (Math.abs(pos) >= imgWidth * (len - 2)) {
 					pos = -imgWidth;
 				}
@@ -163,6 +193,10 @@
 			move($mover4, 'right', 1);
 		}
 		init();
+
+		// $(window).on('resize', function() {
+		// 	init();
+		// });
 	})();
 	</script>
 	<script>
