--- a/piaofanzi/index.html
+++ b/piaofanzi/index.html
@@ -113,6 +113,10 @@
 				<div class="intro">
 					<h2 class="hd">热门电影<br>帮你抢座</h2>
 					<p class="bd">票贩预留为您抢占最佳观影位，想做哪排坐哪排，影院中央尊贵独享！</p>
+					<div class="btn-group">
+						<a href="#" class="btn btn-android" target="_blank"><i class="icon icon-android"></i>Android</a>
+						<a href="#" class="btn btn-ios" target="_blank"><i class="icon icon-ios"></i>iPhone</a>
+					</div>
 				</div>
 			</div>
 		</div>
