update qrcode size

--- a/piaofanzi/index.html
+++ b/piaofanzi/index.html
@@ -61,7 +61,7 @@
 				<div class="content-right">
 					<div class="slogan"></div>
 					<div class="btn-group clearfix">
-						<img src="images/qrcode.jpg" alt="" class="qrcode">
+						<img src="images/qrcode.png" alt="" class="qrcode">
 						<a href="#" class="btn btn-android" target="_blank"><i class="icon icon-android"></i>Android</a>
 						<a href="#" class="btn btn-ios" target="_blank"><i class="icon icon-ios"></i>iPhone</a>
 					</div>
@@ -126,7 +126,7 @@
 			<a class="weixin" href="javascript:;">
 				<i class="fa fa-weixin"></i>
 				<div class="qrcode">
-					<img src="images/qrcode.jpg" alt="">
+					<img src="images/qrcode.png" alt="">
 				</div>
 			</a>
 			<a class="weibo" href="http://weibo.com/piaofanzivip?refer_flag=1001030201_&is_hot=1" target="_blank">
