update download link

--- a/piaofanzi/index.html
+++ b/piaofanzi/index.html
@@ -62,8 +62,8 @@
 					<div class="slogan"></div>
 					<div class="btn-group clearfix">
 						<img src="images/qrcode.png" alt="" class="qrcode">
-						<a href="#" class="btn btn-android" target="_blank"><i class="icon icon-android"></i>Android</a>
-						<a href="#" class="btn btn-ios" target="_blank"><i class="icon icon-ios"></i>iPhone</a>
+						<a href="http://a.app.qq.com/o/simple.jsp?pkgname=com.coolsoft.movie" class="btn btn-android" target="_blank"><i class="icon icon-android"></i>Android</a>
+						<a href="https://itunes.apple.com/cn/app/piao-fan-zi-hui-bi-jia-geng/id1067218483?l=en&mt=8" class="btn btn-ios" target="_blank"><i class="icon icon-ios"></i>iPhone</a>
 					</div>
 				</div>
 			</div>
@@ -114,8 +114,8 @@
 					<h2 class="hd">热门电影<br>帮你抢座</h2>
 					<p class="bd">票贩预留为您抢占最佳观影位，想做哪排坐哪排，影院中央尊贵独享！</p>
 					<div class="btn-group">
-						<a href="#" class="btn btn-android" target="_blank"><i class="icon icon-android"></i>Android</a>
-						<a href="#" class="btn btn-ios" target="_blank"><i class="icon icon-ios"></i>iPhone</a>
+						<a href="http://a.app.qq.com/o/simple.jsp?pkgname=com.coolsoft.movie" class="btn btn-android" target="_blank"><i class="icon icon-android"></i>Android</a>
+						<a href="https://itunes.apple.com/cn/app/piao-fan-zi-hui-bi-jia-geng/id1067218483?l=en&mt=8" class="btn btn-ios" target="_blank"><i class="icon icon-ios"></i>iPhone</a>
 					</div>
 				</div>
 			</div>
