--- a/piaofanzi/index.html
+++ b/piaofanzi/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh" class="no-js">
 <head>
 	<meta charset="UTF-8">
-	<title>票贩子</title>
+	<title>票贩儿@比价</title>
 	<meta name="keywords" content="票贩子, 电影票, 比价, 神器">
 	<meta name="description" content="票贩子-电影票比价神器">
 	<link rel="stylesheet" href="css/reset.css"/>
 	<link rel="stylesheet" href="css/font-awesome.css"/>
 	<link rel="stylesheet" href="css/index.css"/>
+	<script src="js/modernizr-custom.js"></script>
 </head>
 <body>
 	<div class="main">
@@ -137,28 +138,5 @@
 	
 	<script src="js/jquery.min.js"></script>
 	<script src="js/index.js"></script>
-	<script>
-	/*var count = 0;
-	var speed = 0.5;
-	var blur = 0;
-	var $img = $('.image1');
-	var interval = setInterval(function() {
-
-		if (count >= 20) {
-			clearInterval(interval);
-		}
-		blur += speed;
-		$img.css({
-			'-webkit-filter': 'blur(' + blur + 'px)' 
-		});
-		count++;
-	}, 60);*/
-	$('.image1').mouseenter(function() {
-		$(this).addClass('blur');
-	}).mouseleave(function(event) {
-		/* Act on the event */
-		$(this).removeClass('blur');
-	});;
-	</script>
 </body>
 </html>
