--- a/piaofanzi/mobile/index.html
+++ b/piaofanzi/mobile/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -9,7 +9,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="keywords" content="票贩子, 电影票, 比价, 神器">
     <meta name="description" content="票贩子-电影票比价神器">
-    <title>票贩子</title>
+    <title>票贩儿@比价</title>
     <link rel="stylesheet" href="css/reset.css"/>
     <link rel="stylesheet" href="css/font-awesome.css"/>
     <link rel="stylesheet" href="css/index.css"/>
