--- a/piaofanzi/index.html
+++ b/piaofanzi/index.html
@@ -8,6 +8,39 @@
 	<link rel="stylesheet" href="css/reset.css"/>
 	<link rel="stylesheet" href="css/font-awesome.css"/>
 	<link rel="stylesheet" href="css/index.css"/>
+	<script>
+	    var os = function() {
+	        var ua = navigator.userAgent,
+	            isQB = /(?:MQQBrowser|QQ)/.test(ua),
+	            isWindowsPhone = /(?:Windows Phone)/.test(ua),
+	            isSymbian = /(?:SymbianOS)/.test(ua) || isWindowsPhone,
+	            isAndroid = /(?:Android)/.test(ua),
+	            isFireFox = /(?:Firefox)/.test(ua),
+	            isChrome = /(?:Chrome|CriOS)/.test(ua),
+	            isIpad = /(?:iPad|PlayBook)/.test(ua),
+	            isTablet = /(?:iPad|PlayBook)/.test(ua)||(isFireFox && /(?:Tablet)/.test(ua)),
+	            isSafari = /(?:Safari)/.test(ua),
+	            isPhone = /(?:iPhone)/.test(ua) && !isTablet,
+	            isOpen= /(?:Opera Mini)/.test(ua),
+	            isUC = /(?:UCWEB|UCBrowser)/.test(ua),
+	            isPc = !isPhone && !isAndroid && !isSymbian;
+	        return {
+	            isQB: isQB,
+	            isTablet: isTablet,
+	            isPhone: isPhone,
+	            isAndroid : isAndroid,
+	            isPc : isPc,
+	            isOpen : isOpen,
+	            isUC: isUC,
+	            isIpad : isIpad
+	        };
+	    }();
+
+	    if (!os.isPc) {
+			// 跳转到手机版
+	        window.location.replace('http://aaron-fe.github.io/piaofanzi/mobile/index.html');
+	    }
+	</script>
 	<script src="js/modernizr-custom.js"></script>
 </head>
 <body>
