--- a/piaofanzi/mobile/index.html
+++ b/piaofanzi/mobile/index.html
@@ -55,10 +55,10 @@
             <div class="logo"></div>
             <h1>票贩儿@比价<br>会比价  更省钱</h1>
             <div class="btn-wrap">
-                <a href="#" class="btn btn-iphone">
+                <a href="https://itunes.apple.com/cn/app/piao-fan-zi-hui-bi-jia-geng/id1067218483?l=en&mt=8" target="_blank" class="btn btn-iphone">
                     <i class="fa fa-apple"></i>
                     <span>IPHONE</span>
-                </a><a href="#" class="btn btn-android">
+                </a><a href="http://a.app.qq.com/o/simple.jsp?pkgname=com.coolsoft.movie" target="_blank" class="btn btn-android">
                     <i class="fa fa-android"></i>
                     <span>ANDROID</span>
                 </a>
