--- a/piaofanzi/mobile/index.html
+++ b/piaofanzi/mobile/index.html
@@ -111,7 +111,7 @@
                 <h3>票贩子</h3>
                 <p>www.piaofanzi.com<br>备案信息 2015-2016 All Right</p>
                 <div class="link-group">
-                    <a href="#" target="_blank"><i class="fa fa-weibo"></i></a>
+                    <a href="http://weibo.com/piaofanzivip?refer_flag=1001030201_&is_hot=1" target="_blank"><i class="fa fa-weibo"></i></a>
                     <a href="#" target="_blank"><i class="fa fa-weixin"></i></a>
                 </div>
             </footer>
